syntax = "proto3";
package pb;
option go_package = "./pb";
import "google/protobuf/timestamp.proto";

message CreateOrderInput {
    float price = 1;
    float tax = 2;
    string issueDate = 3;
}

message OrderOutput {
    string id = 1;
    float price = 2;
    float tax = 3;
    float finalPrice = 4;
    google.protobuf.Timestamp issueDate = 5;  
    string typeRequisition = 6;
    google.protobuf.Timestamp deleteAt = 7; 
}

message ListOrdersInput {
    int32 page = 1;
    int32 limit = 2;
    string sort = 3;
}

message ListOrdersOutput { 
    repeated OrderOutput orders = 1; 
    int32 totalCount = 2; 
}

service OrderService {
    rpc CreateOrder (CreateOrderInput) returns (OrderOutput);
    rpc ListOrders (ListOrdersInput) returns (ListOrdersOutput);
}